packages/cashc/test/compiler/ParseError/require_too_many_args.cash
contract Test() {
    return {
        hello(bool b) {
            require(true, b);
        }
    }
}
